--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -1,19 +1,21 @@
 <% include partials/header %>
 
+
 <div class="ui main container">
     <div class="ui attached message">
         <div class="header">
             New Blog
         </div>
     </div>
-    <form class="ui form attached fluid segment" action="/blog/<%=blog._id%>?_method=PUT" method="POST" id="blogForm">
+    <form class="ui form attached fluid segment" action="/" method="POST" id="blogForm" enctype="multipart/form-data">
         <div class="field">
             <label>Title</label>
-            <input type="text" name="blog[title]" placeholder="Title" required value="<%= blog.title %>">
+            <input type="text" name="blog[title]" placeholder="Title">
             <label>Image URL</label>
-            <input type="text" name="blog[image]" placeholder="Image URL" required value="<%= blog.image %>">
+            <input type="file" name="fileupload" id="fileupload">
+            <label for="fileupload">Select a file to upload</label>
             <label>Blog Content</label>
-            <textarea name="blog[text]" placeholder="Blog Text" form="blogForm" ><%= blog.text %></textarea>
+            <textarea name="blog[text]" placeholder="Blog Text" form="blogForm"></textarea>
         </div>
         <button class="ui button" type="submit" id="blogSubmit">
             New
