Added Privacy Settings to Blogs and Searching

--- a/views/backups/showChecklistSpecificx.ejs
+++ b/views/backups/showChecklistSpecificx.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
 <div class="ui main container">
         <div class="ui item">
                 <div class="ui piled segment text">
@@ -33,4 +33,4 @@
                 </div>
         </div>
 </div>
-<% include partials/footer %>
+<%- include ../partials/footer %>
