--- a/views/checklists/showChecklistSpecific.ejs
+++ b/views/checklists/showChecklistSpecific.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
 <div class="ui main container centeredSpecific">
         <div class="ui segment middle aligned">
                 <div class="ui huge header"><%= checklist.title %></div>
@@ -33,4 +33,4 @@
         </button>
 
 </div>
-<% include partials/footer %>
+<%- include ../partials/footer %>
