--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
 <div class="ui container">
     <div class="ui attached message">
         <div class="header">
@@ -34,4 +34,4 @@
         Already signed up? <a href="/login">Login here</a> instead.
     </div>
 </div>
-<% include partials/footer %>
+<%- include ../partials/footer %>
