--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3,11 +3,13 @@
 }
 
 body, #trademark{
-    background-color: #0375B4;
+    background-color: #30415D;
 }
 
 a{
     text-decoration: none;
+    color: inherit;
+    padding: 0px;
 }
 
 .h2{
