--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
 
 
 <div class="ui main container">
@@ -21,4 +21,4 @@
 </div>
 
 
-<% include partials/footer %>
+<%- include ../partials/footer %>
