--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
 
 
 <div class="ui main container">
@@ -33,4 +33,4 @@
 </div>
 
 
-<% include partials/footer %>
+<%- include ../partials/footer %>
