--- a/views/backups/showChecklistsx.ejs
+++ b/views/backups/showChecklistsx.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
 
 <div class="ui main container">
     <div class="ui header">
@@ -42,4 +42,4 @@
     </div>
 </div>
 
-<% include partials/footer %>
+<%- include ../partials/footer %>
