--- a/views/checklists/newChecklist.ejs
+++ b/views/checklists/newChecklist.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<%- include ../partials/header %>
     <div class="ui main container">
         <div class="ui header">
                 New Checklist
@@ -20,4 +20,4 @@
 
     </div>
 
-<% include partials/footer %>
+<%- include ../partials/footer %>
